# AI-Powered-Text-to-Voice-Generation

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/tts/: audio.py  coqui.py  engine_base.py
backend/src/utils/: config.py
